Java 21 modernization (#1318)
* deprecate(util): Deprecate CollectionUtil new*WithExpectedSize methods

These methods are superseded by JDK 19 factory methods HashMap.newHashMap(int),
HashSet.newHashSet(int), LinkedHashMap.newLinkedHashMap(int), and
LinkedHashSet.newLinkedHashSet(int) which accept an expected size directly.

* refactor(util): Replace CollectionUtil.new*WithExpectedSize with JDK 19 factory methods in utility and traversal classes

* refactor(core): Replace all CollectionUtil.new*WithExpectedSize with JDK 19 factory methods

Migrate all 64 call sites across generators, coloring, connectivity, cycle,
flow, isomorphism, matching, shortest path, spanning, tour, and clique
packages to use HashMap.newHashMap(int), HashSet.newHashSet(int),
LinkedHashMap.newLinkedHashMap(int), and LinkedHashSet.newLinkedHashSet(int).

* refactor(core): Apply Java 16 pattern matching instanceof across codebase

Apply pattern matching to equals() methods in Pair, Triple, UnorderedPair,
ModifiableInteger, GraphWalk, WeightedUnmodifiableSet, RatioVertex,
ColorRefinementIsomorphismInspector, and AhujaOrlinSharmaCyclicExchange.
Also apply to non-equals() sites in UniformIntrusiveEdgesSpecifics,
WeightedIntrusiveEdgesSpecifics, CollectionUtil.getElement(), and
AhujaOrlinSharmaCapacitatedMinimumSpanningTree. Eliminates redundant
casts and @SuppressWarnings("unchecked") annotations.

* refactor(core): Replace Arrays.asList with List.of, use named threads, use Map.entry()

Replace Arrays.asList with List.of for fixed literal lists in cycle,
shortest path, partition, and GraphTests. Use named daemon platform
threads in ConcurrencyUtil. Replace AbstractMap.SimpleImmutableEntry
with Map.entry() in RandomRegularGraphGenerator.

---------

Co-authored-by: kinable <kinable@amazon.com>