@@ -392,7 +392,7 @@ public class WeakChordalityInspector<V, E>
             bucketsByLabel.add(new HashSet<>());
         }
         List<Integer> labels = new ArrayList<>(Collections.nCopies(n, -1));
-        Set<Integer> unvisited = CollectionUtil.newHashSetWithExpectedSize(separator.size());
+        Set<Integer> unvisited = HashSet.newHashSet(separator.size());
         separator.forEach(pair -> {
             unvisited.add(pair.getFirst());
             labels.set(pair.getFirst(), 0);
@@ -589,7 +589,7 @@ public class WeakChordalityInspector<V, E>
     private GraphPath<V, E> findHole(
         Graph<V, E> graph, V sourceInSeparator, V source, V target, V targetInSeparator)
     {
-        Set<V> visited = CollectionUtil.newHashSetWithExpectedSize(graph.vertexSet().size());
+        Set<V> visited = HashSet.newHashSet(graph.vertexSet().size());
         visited.add(target);
         visited.add(source);
 
@@ -618,7 +618,7 @@ public class WeakChordalityInspector<V, E>
     private List<V> findCycle(
         Set<V> visited, Graph<V, E> graph, V tarInSep, V tar, V sour, V sourInSep)
     {
-        List<V> cycle = new ArrayList<>(Arrays.asList(tarInSep, tar, sour));
+        List<V> cycle = new ArrayList<>(List.of(tarInSep, tar, sour));
         Deque<V> stack = new ArrayDeque<>();
         stack.add(sourInSep);
 
@@ -669,7 +669,7 @@ public class WeakChordalityInspector<V, E>
     private List<V> minimizeCycle(
         Graph<V, E> graph, List<V> cycle, V tar, V tarInSep, V sour, V sourInSep)
     {
-        List<V> minimizedCycle = new ArrayList<>(Arrays.asList(tarInSep, tar, sour));
+        List<V> minimizedCycle = new ArrayList<>(List.of(tarInSep, tar, sour));
         Set<V> forwardVertices = new HashSet<>(cycle);
         forwardVertices.remove(tar);
         forwardVertices.remove(sour);
@@ -719,7 +719,7 @@ public class WeakChordalityInspector<V, E>
         V source = graph.getEdgeSource(edge);
         V target = graph.getEdgeTarget(edge);
         Set<V> neighborhood = neighborhoodSetOf(graph, edge);
-        Map<V, Byte> dfsMap = CollectionUtil.newHashMapWithExpectedSize(graph.vertexSet().size());
+        Map<V, Byte> dfsMap = HashMap.newHashMap(graph.vertexSet().size());
 
         // 0 - unvisited (white), 1 - neighbor of the edge (red), 2 - visited (black)
         for (V vertex : graph.vertexSet()) {
